# Reverse-Polish-notation

./: Arithmetic.cpp  Arithmetic.hpp  CMakeLists.txt  Calculator.cpp  Calculator.hpp  ExceptionRecord.hpp  README.md  Record.cpp  Record.hpp  Token.cpp  Token.hpp  main.cpp  Калькулятор.sln  Калькулятор.vcxproj  Калькулятор.vcxproj.filters
headers/: Arithmetic.hpp  ExceptionRecord.hpp  Record.hpp  Token.hpp
sources/: Arithmetic.cpp  Record.cpp  Token.cpp
